--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class='row'>
         <div class='col-lg-4 col-md-6 sx-12'>
             <div class='section'>
-                <span id='nr1'>Chicken</span>
+                <span id='n1'>Chicken</span>
                 <p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain
                     itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual
                     presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic
@@ -23,7 +23,7 @@
         </div>
         <div class='col-lg-4 col-md-6 sx-12'>
             <div class='section'>
-                <span id='nr2'>Beef</span>
+                <span id='n2'>Beef</span>
                 <p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain
                     itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual
                     presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic
@@ -33,7 +33,7 @@
         </div>
         <div class='col-lg-4 col-md-12 sx-12'>
             <div class='section'>
-                <span id='nr3'>Sushi</span>
+                <span id='n3'>Sushi</span>
                 <p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain
                     itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual
                     presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic
